# Galaxy_simulation

./: CMakeLists.txt
includes/: block.h  star.h  utils.h  vector.h
sources/: block.cpp  main.cpp  star.cpp
